[package]
name = "trusted"
version = "0.3.0"
authors = ["Dmitry Gritsay <dmitry@vinted.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
hyper = "0.9.10"
hyperlocal = { git = "https://github.com/softprops/hyperlocal.git" }
lazy_static = "0.2.1"
# ruru = "0.9.0"
ruru = { path = "../../../../rust/ruru" }
